# Homo3D

BlackSheep/: BlackSheep.cpp  BlackSheep.h  CMakeLists.txt  WeightedSearch.cpp  test.cpp  test2.cpp  test3.cpp  testWeighted.cpp  testWeighted2.cpp  testWeighted3.cpp  testWeighted4.cpp  testWeighted5.cpp
BlackSheep/PaperVersion/: BS_PaperVersion.cpp  BS_PaperVersion.h  CMakeLists.txt  test.cpp
Bresenham3D/: Bresenham3D.cpp  Bresenham3D.h  CMakeLists.txt  testBresenham.cpp
Sol1/: CMakeLists.txt  HomoSearch.cpp  HomoSearch.h  test.cpp
Sol1/distance_field/: README.txt
Sol1/distance_field/include/distance_field/: collision_map.h  distance_field.h  pf_distance_field.h  propagation_distance_field.h  voxel_grid.h
Sol1/distance_field/src/: collision_map.cpp  pf_distance_field.cpp  propagation_distance_field.cpp
Sol1/distance_field/test/: test_distance_field.cpp
Sol1/kdtree/: kdtree.c
Sol12D/: CMakeLists.txt  Grid2D.cpp  Grid2D.h  SDL_Functions.cpp  Search.cpp  Search.h  TopologyGrid2D.cpp  TopologyGrid2D.h  testSDL.cpp  testSDL.h
Sol13D/: CMakeCache.txt  CMakeLists.txt  Grid3D.cpp  Grid3D.h  Makefile  README.txt  Search.cpp  Search.h  TopologyGrid3D.cpp  TopologyGrid3D.h  cmake_install.cmake  test  test.cpp  test.h
Sol13D/files/: map2.doc
Sol13D/kdtree/: kdtree.h
